--- a/style/main.less
+++ b/style/main.less
@@ -89,6 +89,8 @@ footer {
   background-color: @supportFillDark;
   color: @supportTextLight;
   padding: 20px 20px 50px;
+  box-shadow: inset 0 15px 15px -15px rgba(0,0,0, 0.6),
+    inset 0 -15px 15px -15px rgba(0,0,0, 0.6);
 
   .palette-opts();
   .header-color(@supportTextLightEmphasis);
@@ -117,7 +119,7 @@ footer {
   }
 }
 
-.light {
+.light-text {
   font-weight: lighter;
 }
 
