--- a/style/main.less
+++ b/style/main.less
@@ -77,6 +77,7 @@ footer {
     font-variant: small-caps;
     border-bottom: 1px solid @lightGrey;
     padding-bottom: 10px;
+    font-size: 48px;
   }
 
   b,
