Filler clean up & start of final content ordering

--- a/style/accent-elements.less
+++ b/style/accent-elements.less
@@ -33,11 +33,16 @@
   .standard-text {
     font-size: 14px;
     font-weight: normal;
+    margin-top: 20px;
   }
 
   &.center {
     margin-left: auto;
     margin-right: auto;
+  }
+
+  &.under-half {
+    width: 45%;
   }
 
   &.three-fourths-width {
