--- a/style/bootstrap-customize.less
+++ b/style/bootstrap-customize.less
@@ -25,6 +25,10 @@
   .container-fluid {
     display: inline-block;
   }
+
+  .active a {
+    border-radius: 0 0 4px 4px;
+  }
 }
 
 .table-hover > tbody > tr:hover {
