--- a/style/accent-elements.less
+++ b/style/accent-elements.less
@@ -164,6 +164,27 @@
     margin-left: 0;
     padding-left: 20px;
   }
+
+  .quote {
+    font-size: 20px;
+    margin: 20px;
+    padding: 0;
+
+    q::before,
+    q::after {
+      font-size: 48px;
+    }
+
+    q::before {
+      top: -20px;
+      left: -30px;
+    }
+
+    q::after {
+      bottom: -20px;
+      right: -20px;
+    }
+  }
 }
 
 ul {
