--- a/style/accent-elements.less
+++ b/style/accent-elements.less
@@ -372,9 +372,10 @@ ul {
 
 .quote {
   position: relative;
-  margin: 50px;
+  margin: 0 50px;
   padding: 50px 0;
-  font-size: 48px;
+  font-size: 32px;
+  text-align: center;
 
   q {
     quotes: "“" "”" "‘" "’";
