--- a/style/main.css
+++ b/style/main.css
@@ -7175,9 +7175,10 @@ ul.legend li.tri::before {
 }
 .quote {
   position: relative;
-  margin: 50px;
+  margin: 0 50px;
   padding: 50px 0;
-  font-size: 48px;
+  font-size: 32px;
+  text-align: center;
 }
 .quote q {
   quotes: "“" "”" "‘" "’";
