--- a/style/vars.less
+++ b/style/vars.less
@@ -1,7 +1,7 @@
-@indigo: #303F9F;
-@lightBlue: #00BCD4;
+@indigo: #303F9F; // R: 48 G: 63 B: 159
+@lightBlue: #00BCD4; // R: 0 G: 188 B: 212
 @pink: #E91E63;
-@darkGrey: #444;
+@darkGrey: #444; // // R: 68 G: 68 B: 68
 @mediumGrey: #999;
 @lightGrey: #ddd;
 @lighterGrey: #eee;
