--- a/style/accent-elements.less
+++ b/style/accent-elements.less
@@ -188,6 +188,16 @@
 }
 
 ul {
+  &.q-a {
+    li {
+      margin-bottom: 10px;
+
+      i {
+        margin-left: 15px;
+      }
+    }
+  }
+
   &.plain {
     margin-left: 0;
     padding-left: 0;
@@ -219,6 +229,7 @@ ul {
     padding: 40px 0 50px;
     margin-left: 20px;
     border-left: 5px solid @lightGrey;
+    display: inline-block;
 
     &::before,
     &::after {
@@ -244,6 +255,7 @@ ul {
       position: relative;
       padding-left: 40px;
       color: lighten(@mainText, 20%);
+      text-align: left;
 
       &.year {
         font-weight: lighter;
@@ -374,7 +386,7 @@ ul {
   position: relative;
   margin: 0 50px;
   padding: 50px 0;
-  font-size: 32px;
+  font-size: 42px;
   text-align: center;
 
   q {
