Website Release Candidate

--- a/style/image-set.less
+++ b/style/image-set.less
@@ -22,6 +22,16 @@
       }
     }
 
+    &.wide-well {
+      .image-set-list {
+        width: 225px;
+
+        + .image-set-full {
+          left: 225px;
+        }
+      }
+    }
+
     hr {
       border-top-color: @lightGrey;
     }
