--- a/style/main.less
+++ b/style/main.less
@@ -140,6 +140,14 @@ footer {
 .vspace {
   height: 30px;
 
+  &.v10 {
+    height: 10px;
+  }
+
+  &.v20 {
+    height: 20px;
+  }
+
   &.v50 {
     height: 50px;
   }
